<resources>
    <string name="app_name">FlightSchedule</string>

    <string name="initializing">Initializing</string>
    <string name="loading">Loading</string>
    <string name="multiple_permissions_needed">Multiple Permissions Needed</string>
    <string name="grant">Grant</string>
    <string name="exit">Exit</string>
    <string name="permissions_request_message">This app needs access to Camera and Location permissions to run smoothly. Please grant them or exit app.</string>
    <string name="enable_in_settings">Enable in Settings</string>
    <string name="go_to_permissions_to_grant_them">Go to Permissions to grant all permissions.</string>
    <string name="unable_to_get_permissions">Unable to get permissions</string>
    <string name="no_internet_msg">No internet Connection Please try again later</string>
    <string name="from">From?</string>
    <string name="to">To?</string>
    <string name="continue_">Continue</string>
    <string name="select_start_location">Please select start location</string>
    <string name="select_end_location">Please select end location</string>
    <string name="no_results_found">No results found</string>
    <string name="no_flights_available">No flights available</string>
    <string name="initializing_please_wait">Initializing, please wait...</string>
    <string name="searching_for_available_flights">Searching for available flights...</string>
    <string name="flight_no">FN# %s</string>
    <string name="origin_location_unavailable">Departure airport location unavailable</string>
    <string name="dest_location_unavailable">Arrival airport location unavailable</string>
    <string name="flight_schedule_details">Flight Schedule Details</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>

</resources>
